--- a/assets/css/theme/style.css
+++ b/assets/css/theme/style.css
@@ -863,3 +863,278 @@ footer .c-r a:hover {
   -webkit-transition: color .25s linear;
   transition: color .25s linear;
 }
+
+/*---------------------------------------------------------------------
+                            Special Features
+-----------------------------------------------------------------------*/
+.iq-amazing-tab .nav-tabs {
+  border: none;
+}
+.iq-amazing-tab .nav-tabs li {
+  margin-top: 50px;
+  margin-bottom: 0;
+  float: left;
+  display: inline-block;
+  width: 100%;
+}
+.iq-amazing-tab .nav-tabs li a {
+  margin: 0;
+  line-height: normal;
+  border: none;
+  border-radius: 0;
+  padding: 0;
+  color: #666;
+  transition: all 0s ease-in-out;
+  transition: all 0s ease-in-out;
+  -moz-transition: all 0s ease-in-out;
+  -ms-transition: all 0s ease-in-out;
+  -o-transition: all 0s ease-in-out;
+  -webkit-transition: all 0s ease-in-out;
+  display: block;
+  position: relative;
+}
+.iq-amazing-tab .nav-tabs li.active a, .iq-amazing-tab .nav-tabs li.active a:hover, .iq-amazing-tab .nav-tabs li.active a:focus {
+  color: #fff;
+  border: none;
+  left: -20px;
+  background: rgba(228,96,31, 1);
+  background: -moz-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(228,96,31, 1)), color-stop(100%, rgba(255,51,1, 1)));
+  background: -webkit-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: -o-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: -ms-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: linear-gradient(to right, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa6b29', endColorstr='#ff3301', GradientType=1);
+
+  position: relative;
+    display: block;
+    /* padding: 10px 15px; */
+}
+.iq-amazing-tab .nav-tabs li a:hover {
+  color: #fff;
+  border: none;
+  background: rgba(228,96,31, 1);
+  background: -moz-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(228,96,31, 1)), color-stop(100%, rgba(255,51,1, 1)));
+  background: -webkit-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: -o-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: -ms-linear-gradient(left, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  background: linear-gradient(to right, rgba(228,96,31, 1) 0%, rgba(255,51,1, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa6b29', endColorstr='#ff3301', GradientType=1);
+}
+.iq-amazing-tab .nav-tabs li.active a .iq-fancy-box-01:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  margin-top: -10px;
+  left: -10px;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  background: #fa6b29;
+  border-radius: 90px;
+  -webkit-box-shadow: 0px 0px 0px 5px rgba(247, 247, 247, 1);
+  -moz-box-shadow: 0px 0px 0px 5px rgba(247, 247, 247, 1);
+  box-shadow: 0px 0px 0px 5px rgba(247, 247, 247, 1);
+}
+.iq-amazing-tab .nav-tabs li.active a .iq-fancy-box-01:after {
+  content: "";
+  position: absolute;
+  z-index: 9;
+  top: 50%;
+  margin-top: -1px;
+  right: 100%;
+  width: 100px;
+  height: 2px;
+  display: inline-block;
+  background: rgba(255,51,1, 1);
+  background: -moz-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,51,1, 1)), color-stop(100%, rgba(228,96,31, 1)));
+  background: -webkit-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: -o-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: -ms-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: linear-gradient(to right, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3301', endColorstr='#fa6b29', GradientType=1);
+}
+.nav-tabs li.active a.round-right, .nav-tabs li.active a.round-right:hover, .nav-tabs li.active a.round-right:focus {
+  right: -20px;
+  left: inherit;
+  display: block;
+  position: relative;
+}
+.iq-amazing-tab .nav-tabs li.active a.round-right .iq-fancy-box-01:before {
+  background: #ff3301;
+  right: -10px;
+  left: inherit;
+}
+.iq-amazing-tab .nav-tabs li.active a.round-right .iq-fancy-box-01:after {
+  right: inherit;
+  left: 100%;
+  background: rgba(255,51,1, 1);
+  background: -moz-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,51,1, 1)), color-stop(100%, rgba(228,96,31, 1)));
+  background: -webkit-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: -o-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: -ms-linear-gradient(left, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  background: linear-gradient(to right, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3301', endColorstr='#fa6b29', GradientType=1);
+}
+.nav-tabs li.active a h4, .nav-tabs li.active a:hover h4, .nav-tabs li.active a:focus h4, .nav-tabs li.active a i, .nav-tabs li.active a:hover i, .nav-tabs li.active a:focus i {
+  color: #fff;
+}
+.nav-tabs li.active a:hover{
+  background: linear-gradient(to right, rgba(255,51,1, 1) 0%, rgba(228,96,31, 1) 100%);
+}
+.iq-amazing-tab .nav-tabs li a:hover h4 {
+  color: #fff;
+}
+.iq-amazing-tab .nav-tabs li a:hover i {
+  background: none;
+  color: #fff;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: snow;
+}
+.iq-amazing-tab .tab-content {
+  background: url('../../images/screenshots/phone.png') no-repeat top center;
+  padding: 87px 36px 99px 44px;
+  background-size: 100% 100%;
+}
+.iq-amazing-tab .tab-content .tab-pane img {
+  width: 100%;
+}
+/* fancy box 01 */
+.iq-fancy-box-01 {
+  padding: 10px 30px;
+  -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
+}
+.iq-fancy-box-01 i {
+  font-size: 50px;
+  float: left;
+  margin-right: 15px;
+  color: #fa6b29;
+  font-family: ;
+}
+.iq-fancy-box-01 h4 {
+  margin: 15px 0 0;
+  float:left;
+  display: inline-block;
+}
+.fancy-content-01 {
+  display: inline-block;
+  width: 100%;
+}
+.fancy-content-01 p {
+  line-height: 24px;
+  font-size: 13px;
+}
+/* fancy box 01 Right icon */
+.iq-fancy-box-01.text-right i {
+  float: right;
+  margin-left: 15px;
+  margin-right: 0;
+}
+.iq-fancy-box-01.text-right h4 {
+  display: inline-block;
+  float: none;
+}
+/*---------------------------------------------------------------------
+                           App Screenshots
+-----------------------------------------------------------------------*/
+.iq-app:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  height: 100%;
+  width: 100%;
+}
+.iq-app-info {
+  padding: 30px 15% 0% 29%;
+}
+.home-screen-slide {
+  position: relative;
+  padding: 72px 0px 76px 36px;
+  margin-left: -100px;
+}
+.home-screen-slide:before {
+  background: url('../images/screenshots/phone.png') no-repeat 0 0;
+  background-size: 100% 100%;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 301px;
+}
+.home-screen-slide .owl-carousel .item {
+  width: 236px;
+}
+.iq-app .owl-carousel .owl-item a {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+.iq-app .owl-carousel .owl-item a:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: "\f4a4";
+  font-size: 30px;
+  color: #fff;
+  line-height: 15;
+  text-align: center;
+  vertical-align: center;
+  background: rgba(228,96,31, 0.8);
+  z-index: 9;
+  opacity: 0;
+}
+.iq-app .owl-carousel .owl-item a:hover:before {
+  opacity: 1;
+  -webkit-transition: all 0.5s ease-out 0s;
+  -moz-transition: all 0.5s ease-out 0s;
+  -ms-transition: all 0.5s ease-out 0s;
+  -o-transition: all 0.5s ease-out 0s;
+  transition: all 0.5s ease-out 0s;
+}
+.d-none{
+  display: none !important;
+}
+.modal-header{
+  border-radius: 0px;
+  border: none;
+  border-color: none;
+
+}
+.modal-content{
+  border-radius: 0px;
+  border: none;
+}
+.font-12{
+  font-size: 12px !important;
+}
+.bg-primary{
+  background: #ff3301 !important;
+}
+.form-control{
+  height: calc(2.3rem + 10px);
+  border-radius: 0px;
+}
+.text-lighter{
+  color: #ffffff87;
+}
+.modal-header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.font-14{
+  font-size: 14px !important;
+}
+.font-13{
+  font-size: 13px !important;
+}
