--- a/assets/css/theme/style.css
+++ b/assets/css/theme/style.css
@@ -470,48 +470,48 @@ footer .n-l h2 {
   font-weight: 600;
 }
 footer .n-l form {
-  max-width: 720px;
+  /* max-width: 720px; */
 }
-footer .n-l form input {
+footer .n-l form input, footer .n-l form textarea {
   height: 50px;
   border: 1px solid var(--thWhite2);
   padding: 0 30px;
   outline: none;
-  border-radius: 50px 0 0 50px;
+  /* border-radius: 50px 0 0 50px; */
   background: transparent;
   color: #fff;
   font-size: 16px;
   -webkit-transition: all .25s ease-in-out;
   transition: all .25s ease-in-out;
 }
-footer .n-l form input::-webkit-input-placeholder {
+footer .n-l form input::-webkit-input-placeholder,footer .n-l form textarea::-webkit-input-placeholder {
   color: var(--thWhite3);
   font-weight: lighter;
 }
-footer .n-l form input::-moz-placeholder {
+footer .n-l form input::-moz-placeholder,.n-l form textarea::-moz-placeholder {
   color: var(--thWhite3);
   font-weight: lighter;
 }
-footer .n-l form input:-ms-input-placeholder {
+footer .n-l form input:-ms-input-placeholder, footer .n-l form textarea:-ms-input-placeholder{
   color: var(--thWhite3);
   font-weight: lighter;
 }
-footer .n-l form input::-ms-input-placeholder {
+footer .n-l form input::-ms-input-placeholder, footer .n-l form textarea:-ms-input-placeholder {
   color: var(--thWhite3);
   font-weight: lighter;
 }
-footer .n-l form input::placeholder {
+footer .n-l form input::placeholder, footer .n-l form textarea::placeholder {
   color: var(--thWhite3);
   font-weight: lighter;
 }
-footer .n-l form input:focus {
+footer .n-l form input:focus,footer .n-l form textarea:focus  {
   background: rgba(47, 85, 212, .05);
 }
 footer .n-l form button {
   min-width: 130px;
   height: 50px;
   border: 1px solid var(--thWhite2);
-  border-radius: 0 50px 50px 0;
+  /* border-radius: 0 50px 50px 0; */
   font-size: 16px;
   font-weight: 500;
   -webkit-transition: all .25s ease-in-out;
@@ -542,6 +542,9 @@ footer .links ul li a:hover {
 }
 footer .c-r {
   padding-bottom: 50px;
+  padding: 25px 35px 0px;
+    padding-bottom: 25px;
+    border-top: 1px solid #444444;
 }
 footer .c-r p {
   font-size: 13px;
@@ -883,7 +886,7 @@ footer .c-r a:hover {
   border: none;
   border-radius: 0;
   padding: 0;
-  color: #666;
+  color: #dee2e694;
   transition: all 0s ease-in-out;
   transition: all 0s ease-in-out;
   -moz-transition: all 0s ease-in-out;
@@ -1137,4 +1140,139 @@ footer .c-r a:hover {
 }
 .font-13{
   font-size: 13px !important;
+}
+
+.veta-foot img {
+  height: 30px;
+  margin-right: 2rem;
+}
+.opacity-5 {
+  opacity: 0.5 !important;
+}
+.footer-link{
+  color: #a5b8c5 !important;
+}
+.the-grey-text{
+  color: #8a9196 !important;
+}
+
+@media only screen and (max-width: 1200px) {
+  .iq-amazing-tab .tab-content .tab-pane img {
+   left: 52px;
+  }
+}
+
+@media (max-width: 1199px){
+.iq-fancy-box-01 {
+  padding: 10px 30px;
+}
+
+@media (max-width: 1199px)
+{
+    .iq-fancy-box-01 i {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 991px) and (min-width: 768px)
+{
+    .hidden-sm {
+        display: none !important;
+    }
+    .iq-amazing-tab .nav-tabs li.active a.round-right .iq-fancy-box-01:after{
+        display: none;
+    }
+    .iq-amazing-tab .nav-tabs li.active a.round-right .iq-fancy-box-01:before{
+        display: none;
+    }
+    .iq-amazing-tab .nav-tabs li.active a .iq-fancy-box-01:after{
+        display: none;
+    }
+    .iq-amazing-tab .nav-tabs li.active a .iq-fancy-box-01:before{
+        display: none;
+    }
+    .nav-tabs li.active a.round-right{
+        right: 0px;
+        left: 0px;
+    }
+    
+    
+}
+
+@media (max-width: 767px)
+{
+    .hidden-xs {
+        display: none !important;
+    }
+    .iq-amazing-tab .nav-tabs li.active a.round-right .iq-fancy-box-01:after{
+        display: none;
+    }
+    .iq-amazing-tab .nav-tabs li.active a.round-right .iq-fancy-box-01:before{
+        display: none;
+    }
+    .iq-amazing-tab .nav-tabs li.active a .iq-fancy-box-01:after{
+        display: none;
+    }
+    .iq-amazing-tab .nav-tabs li.active a .iq-fancy-box-01:before{
+        display: none;
+    }
+    .nav-tabs li.active a.round-right{
+        right: 0px;
+        left: 0px;
+    }
+}
+
+@media (min-width: 992px){
+    .ml-lg-auto, .mx-lg-auto {
+        margin-left: auto!important;
+    }
+
+    .ml-lg-5, .mx-lg-5 {
+        margin-left: 3rem!important;
+    }
+    
+}
+
+@media (min-width: 992px){
+    .col-lg-2 {
+        -ms-flex: 0 0 16.666667%;
+        flex: 0 0 16.666667%;
+        max-width: 16.666667%;
+    }
+}
+
+@media (max-width: 1109px){
+    .the-rev-laptop img{
+        margin-left: -75px;
+    }
+}
+
+/* large devices */
+@media (max-width: 1199.98px) {
+  /* -- :: Partners */
+  .partners .content .th-badge {
+    top: 50% !important;
+    left: 50% !important;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  /* text contain */
+  .partners .t-c h3 {
+    font-size: 24px;
+  }
+  .partners .t-c p {
+    font-size: 15px;
+    font-weight: 400;
+  }
+  .partners .t-c a {
+    font-size: 15px;    
+  }
+}
+.partners .row > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mb-60 {
+  margin-bottom: 60px;
 }
